Cambios en FechaUtils para usar ints. Se agregaron llamadas en el GestorAula, se creó ResultadoDTO, menosSolapadas nuevo.