@@ -7,6 +7,7 @@ import jakarta.persistence.Query;
 import org.tp.dto.FechaDTO;
 import org.tp.dto.ReservaDTO;
 import org.tp.entity.*;
+import org.tp.utils.FechaInterface;
 import org.tp.utils.FechaUtils;
 
 import java.time.LocalDate;
@@ -65,7 +66,8 @@ public class ReservaDAO implements ReservaDAOImpl{
         try {
 
             List<Aula> aulasDefinitivas = new ArrayList<>();
-            List<Integer> horariosA = FechaUtils.convertirHoras(fechas.getFirst().getHorarioInicio(), fechas.getFirst()); //Arreglo de horarioInicio y horarioFin para cada fecha dentro de la lista listaFechasDTO
+            //List<Integer> horariosA = FechaUtils.convertirHoras(fechas.getFirst().getHorarioInicio(), fechas.getFirst()); //Arreglo de horarioInicio y horarioFin para cada fecha dentro de la lista listaFechasDTO
+            List<Integer> horariosA = FechaUtils.convertirHoras(fechas.get(0).getHorarioInicio(), fechas.get(0).getDuracion());
 
             List<LocalDate> fechasLista = fechas.stream()
                     .map(FechaDTO::getFecha)
@@ -101,7 +103,7 @@ public class ReservaDAO implements ReservaDAOImpl{
                 boolean flagDisponible = true;
                 List<Fecha> fechasAula = fechasPorAula.get(idAula); //Guardamos la lista de fechas que tiene cada llave (aula) en el map
                 for(Fecha f : fechasAula) { //Recorremos las fechas de cada aula y comparamos horarios
-                    List<Integer> horariosB = FechaUtils.convertirHoras(f.getHorarioInicio(),f);
+                    List<Integer> horariosB = FechaUtils.convertirHoras(f.getHorarioInicio(),f.getDuracion());
                     if(FechaUtils.solapa(horariosA,horariosB)) {
                         flagDisponible = false;
                         break;
@@ -128,7 +130,79 @@ public class ReservaDAO implements ReservaDAOImpl{
         }
     }
 
-    public List<Aula> menosSolapadas(List<Aula> aulasFiltradas, List<FechaDTO> fechas) {
+    public List<ReservaDTO> menosSolapadas(List<Aula> aulasFiltradas, List<FechaDTO> fechas) {
+        factory = Persistence.createEntityManagerFactory("Aplicacion");
+        manager = factory.createEntityManager();
+
+        List<ReservaDTO> reservasMenosSolapadasDTO = new ArrayList<>();
+        double minimaCantidad = Double.MAX_VALUE;
+
+        List<Integer> horariosA = FechaUtils.convertirHoras(fechas.get(0).getHorarioInicio(), fechas.get(0).getDuracion());// Convertir horarios y fechas para trabajarlas
+        List<LocalDate> fechasLista = fechas.stream()
+                .map(FechaDTO::getFecha)
+                .collect(Collectors.toList());
+        List<Long> idsAulas = aulasFiltradas.stream()
+                .map(Aula::getIdAula)
+                .collect(Collectors.toList());
+
+        String hql = "SELECT r.idReserva, r.cantidadAlumnos, r.correoContacto, "
+                + "f.horarioInicio, f.duracion, f.idaula, r.idPeriodo, f.fecha "
+                + "FROM Reserva r "
+                + "JOIN Periodo p ON r.idPeriodo = p.idPeriodo "
+                + "JOIN Fecha f ON f.idaula IN :idsAulas "
+                + "WHERE f.fecha IN :fechas";//obtener reservas y datos utiles de las tablas reserva, fecha, periodo
+
+        Query query = manager.createQuery(hql);
+        query.setParameter("fechas", fechasLista);
+        query.setParameter("idsAulas", idsAulas);
+
+        List<Object[]> resultados = query.getResultList();
+
+        Map<Long, List<ReservaDTO>> reservasPorAula = new HashMap<>();// Agrupar reservas por aula y calcular solapamiento
+
+        for (Object[] row : resultados) {
+            Long idReserva = (Long) row[0];
+            Integer cantidadAlumnos = (Integer) row[1];
+            String correoContacto = (String) row[2];
+            String horarioInicio = (String) row[3];
+            Integer duracion = (Integer) row[4];
+            Long idAula = (Long) row[5];
+            LocalDate fecha = (LocalDate) row[7];
+
+            List<Integer> horariosB = FechaUtils.convertirHoras(horarioInicio, duracion);
+
+            if (FechaUtils.solapa(horariosA, horariosB)) {
+                ReservaDTO dto = new ReservaDTO(idReserva, cantidadAlumnos, correoContacto, horarioInicio, duracion, idAula, fecha);
+
+                reservasPorAula.computeIfAbsent(idAula, k -> new ArrayList<>()).add(dto);// Agrupar las reservas por aula (Invento del señor gpt, testear)
+            }
+        }
+
+
+        for (Map.Entry<Long, List<ReservaDTO>> entry : reservasPorAula.entrySet()) {// Calcular el solapamiento total y seleccionar las reservas menos solapadas
+            double cantidadSolapada = 0;
+            List<ReservaDTO> reservasSolapadas = entry.getValue();
+
+            for (ReservaDTO reserva : reservasSolapadas) {
+                List<Integer> horariosB = FechaUtils.convertirHoras(reserva.getHorarioInicio(), reserva.getDuracion());
+                cantidadSolapada += FechaUtils.calcularSolapamiento(horariosA, horariosB);
+            }
+
+            if (cantidadSolapada < minimaCantidad) {
+                minimaCantidad = cantidadSolapada;
+                reservasMenosSolapadasDTO = new ArrayList<>(reservasSolapadas);
+            } else if (cantidadSolapada == minimaCantidad) {
+                reservasMenosSolapadasDTO.addAll(reservasSolapadas);
+            }
+        }
+
+        return reservasMenosSolapadasDTO;
+    }
+
+}
+
+
+/*public List<ReservaDTO> menosSolapadas(List<Aula> aulasFiltradas, List<FechaDTO> fechas) {
         factory = Persistence.createEntityManagerFactory("Aplicacion");
         manager = factory.createEntityManager();
 
@@ -179,9 +253,7 @@ public class ReservaDAO implements ReservaDAOImpl{
                 aulasMenosSolapadas.add(fechasPorAula.get(fechasPorAula.keySet().toArray()[i]).stream().map(Fecha::getAula).findFirst().orElse(null));
             }
         }
+        List<ReservaDTO> reservasMenosSolapadas = new ArrayList<>();//Falta esta parte, importante!
+        return reservasMenosSolapadas;
 
-        return aulasMenosSolapadas;
-
-    }
-
-}
+    }*/
